# VPCC-Workshops

./: .gitignore  README.md  pyproject.toml
Creating a Typeracer Bot/Workshop 1/: Challenge_1.py  Challenge_2.py  Challenge_3.py  Challenge_4.py
Creating a Typeracer Bot/Workshop 2/: Challenge_1.py  Challenge_2.py  Challenge_3.py
Creating a Typeracer Bot/Workshop 3/: Challenge_1.py  Challenge_2.py  Challenge_3.py  Challenge_4.py  Challenge_5.py
Creating a Typeracer Bot/Workshop 4/: Extension.py
