[tool.poetry]
name = "vpcc-workshops"
version = "0.1.0"
description = ""
authors = ["Kevin Wang <59260907+Togohogo1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynput = "^1.7.5"
selenium = "^4.1.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
